# easy_psql_viewer

./: Cargo.toml
src/: lib.rs  main.rs
