[package]
name = "axum_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.15"
tokio = { version = "1.27.0", features = ["full"] }

# JSON
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# PostgreSQL
sqlx = { version = "0.6.3", features = [ "runtime-tokio-rustls", "postgres"  ] }

# Hash-Browns
indexmap = { version = "1.9.3", features = ["serde"] }
